- Fixed problem with date align plugin - Adjusted margins for headings - Removed anchor from banner name

--- a/css/style.css
+++ b/css/style.css
@@ -18,19 +18,22 @@ h1, h2 {
   margin: 0;
   color: var(--dark-color);
 }
+h1 + h2 {
+  margin-top: 0.5em;
+}
 h1 {
-  margin: 1rem 0 0 0;
+  margin: 1em 0 0 0;
   font-size: 1.8rem;
   text-transform: uppercase;
-
+  border-bottom: 1pt solid var(--dark-color);
 }
 h2 {
-  margin: 0.5rem 0 0 0;
+  margin: 1em 0 0 0;
   font-size: 1.4rem;
 }
 h3 {
   font-family: "Open Sans", sans-serif;
-  margin: 0.5rem 0;
+  margin: 0.5em 0 0 0;
   font-size: 1.2rem;
   font-weight: 600;
 }
@@ -106,17 +109,24 @@ blockquote {
   padding: 0.5rem 1rem 0.1rem 1rem;
   font-family: Bitter;
 }
-#banner h1 a {
-  margin-top: 0;
-  text-decoration: none;
+#banner h1 {
+  font-size: 2rem;
+  margin: 1em 0 0 0;
+  padding: 0;
+  color: var(--dark-color);
+  border: none;
+}
+#banner hr {
+  margin: 0;
 }
 a {
   text-decoration: underline;
   color: inherit;
 }
+
 a:hover {
   color: var(--dark-color);
-  font-weight: 900;
+  /* font-weight: 900; */
 }
 .container {
     padding: 1rem;
